--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body> 
+<body>
+	<div></div> 
+	<div></div> 
+	<div></div> 
+	<div></div> 
+	<div></div> 
  
 </body>
 	<script type="text/javascript" src="lab.js"></script>
